<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/mnu_home" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/mnu_list" />
        <item
            android:id="@+id/nav_over"
            android:icon="@drawable/ic_menu_over"
            android:title="@string/mnu_over" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_stats"
            android:title="@string/mnu_stats" />
        <item
            android:id="@+id/nav_markets"
            android:icon="@drawable/ic_menu_market"
            android:title="@string/mnu_markets" />
    </group>
</menu>