<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ListFragment">

    <ImageView
        android:id="@+id/list_logo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="Logo" />

    <TextView
        android:id="@+id/txt_enter_prod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/list_txt"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_logo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inp_prod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        android:hint="product name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_enter_prod" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inp_quant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:hint="quantity"
        app:layout_constraintStart_toEndOf="@+id/inp_prod"
        app:layout_constraintTop_toBottomOf="@+id/txt_enter_prod" />

    <Spinner
        android:id="@+id/spin_prod_type"
        android:layout_width="155dp"
        android:layout_height="45dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/inp_quant"
        app:layout_constraintTop_toBottomOf="@+id/txt_enter_prod" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        android:text="@string/btn_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inp_prod" />

    <Spinner
        android:id="@+id/spin_market"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toStartOf="@+id/btn_sort"
        app:layout_constraintStart_toEndOf="@+id/btn_add"
        app:layout_constraintTop_toBottomOf="@+id/inp_quant" />

    <Button
        android:id="@+id/btn_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:backgroundTint="@color/app_color_3"
        android:text="@string/btn_sort_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_prod_type" />

    <ListView
        android:id="@+id/list_prod"
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_market" />

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/app_color_3"
        android:text="@string/btn_complete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_prod" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inp_price"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="64dp"
        android:hint="*total price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_complete"
        app:layout_constraintTop_toBottomOf="@+id/list_prod" />

</androidx.constraintlayout.widget.ConstraintLayout>